# nextbrowser-cli

./: .env.example  .gitignore  AGENTS.md  LICENSE  Nextbrowser_Harness_MVP_v1.2_1.docx  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
docs/: AGENT_HOSTS.md  AGENT_QUICKSTART.md  OPENCLAW.md
examples/: agent_skill.md  steps-pixelscan.json  steps-reddit.json
examples/scripts/: count-posts.js
nextbrowser_harness/: __init__.py  __main__.py  agent_hosts.py  agent_navigation.py  agent_rules.py  agent_setup.py  browser_actions.py  cdp_only.py  cli.py  config.py  harness.py  onboarding.py  openclaw_setup.py  platform_paths.py  site_recipes.py
nextbrowser_harness/accounts/: __init__.py  registry.py
nextbrowser_harness/agent/: __init__.py  preflight.py  runner.py
nextbrowser_harness/element_search/: __init__.py  cdp.py  context.py  (+1 more)
scripts/: README.md  setup-agent.sh  setup-multilogin.ps1  setup-multilogin.sh  setup-openclaw.ps1  setup-openclaw.sh  sync_skill_pack.py  test-all-features.ps1  test-reddit-mlx.ps1  verify-all-commands.ps1
tests/: test_agent_cli.py  test_agent_login_flow.py  test_agent_navigation.py  test_agent_prompts.py  test_agent_rules.py  test_browser_actions.py  test_browser_actions_extended.py  test_browser_intel.py  test_browser_layer.py  test_browser_use_bridge.py  test_browser_use_exec.py  test_cdp_control.py  test_cdp_login.py  test_cdp_snapshot.py  test_cdp_survey.py  test_config.py  test_element_search.py  test_login_workflow.py  test_mlx_cdp_bridge.py  test_mlx_doctor.py  test_mlx_linux_launcher.py  test_mlx_platform.py  test_mlx_recommend.py  test_mlx_setup_wizard.py  test_multilogin_client.py  test_onboarding_merge.py  test_platform_openclaw.py  test_scrape_tier1.py  test_site_recipes.py  test_skill_pack.py  test_tier3_gate.py  test_tiers.py  test_undetected_browser.py
(+74 files in other folders)
