[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nextbrowser-harness"
version = "0.1.2"
description = "Multimodular browser automation harness for AI agents (MVP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]
browser-use = ["browser-use>=0.5.0"]
dev = ["pytest>=7.4.0"]

[project.scripts]
nextbrowser = "nextbrowser_harness.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nextbrowser_harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
