[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nextbrowser-harness"
version = "0.1.2"
description = "Multimodular browser automation harness for AI agents (MVP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/sslprograms/nextbrowser-cli"
Repository = "https://github.com/sslprograms/nextbrowser-cli"
Documentation = "https://github.com/sslprograms/nextbrowser-cli/blob/main/docs/AGENT_QUICKSTART.md"

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]
undetected = ["undetected-chromedriver>=3.5.0"]
browser-use = ["browser-use>=0.12.0"]
dev = ["pytest>=7.4.0"]

[project.scripts]
nextbrowser = "nextbrowser_harness.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nextbrowser_harness*"]

[tool.setuptools.package-data]
nextbrowser_harness = ["skill_pack/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
